# LivingLogic

./: CMakeLists.txt  README.md  cameracontroller.cpp  cameracontroller.h  cons.qrc  cont.qrc  contractor.qml  gptserver.cpp  gptserver.h  imgup.qml  initial.qml  interiror.qrc  main.cpp  main.qml  parameter.qml  partition.qml  report.qml
design/: LivingLogic Logo.ai
resources/: fonts.qrc  loader.qrc
